--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/game.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/multiplayer/multiplayer_manager.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/multiplayer/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,21 +25,21 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/player.tscn", "res://scenes/multiplayer_player.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://chunks/chunk1.tscn", "res://chunks/chunk2.tscn", "res://chunks/chunk3.tscn", "res://scenes/multiplayer_player.tscn")
+current_scene="res://scenes/game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/multiplayer/multiplayer_controller.gd", "res://scripts/multiplayer/multiplayer_input.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/player.gd"]
-selected_script="res://scripts/multiplayer/multiplayer_controller.gd"
-open_help=["CharacterBody2D", "Input", "Node"]
+open_scripts=["res://scripts/chunk.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
+selected_script="res://scripts/multiplayer/multiplayer_manager.gd"
+open_help=[]
 script_split_offset=140
 list_split_offset=0
-zoom_factor=0.892621
+zoom_factor=1.0
 
 [ShaderEditor]
 
