--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/multiplayer/multiplayer_manager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/multiplayer/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/player.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/multiplayer/", "res://scenes/", "res://assets/", "res://assets/sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://chunks/chunk1.tscn", "res://chunks/chunk2.tscn", "res://chunks/chunk3.tscn", "res://scenes/multiplayer_player.tscn")
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://chunks/chunk1.tscn", "res://chunks/chunk2.tscn", "res://chunks/chunk3.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn")
 current_scene="res://scenes/game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
-selected_script="res://scripts/multiplayer/multiplayer_manager.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
