--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://chunks/chunk1.tscn", "res://chunks/chunk2.tscn", "res://chunks/chunk3.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/game.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://chunks/chunk1.tscn", "res://chunks/chunk2.tscn", "res://chunks/chunk3.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn", "res://scenes/desert_spikes.tscn")
+current_scene="res://scenes/desert_spikes.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/killzone.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
+selected_script="res://scripts/multiplayer/multiplayer_manager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
