--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -6,7 +6,7 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=-1
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/multiplayer/", "res://scenes/", "res://assets/", "res://assets/sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://chunks/chunk2.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/multiplayer/", "res://scenes/", "res://chunks/", "res://assets/fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/game.tscn", "res://chunks/chunk1.tscn", "res://chunks/chunk2.tscn", "res://chunks/chunk3.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn", "res://scenes/desert_spikes.tscn")
-current_scene="res://scenes/desert_spikes.tscn"
+current_scene="res://chunks/chunk2.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/killzone.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
-selected_script="res://scripts/multiplayer/multiplayer_manager.gd"
+open_scripts=["res://scripts/chunk.gd", "res://scripts/game_manager.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
+selected_script="res://scripts/game_manager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
@@ -47,3 +47,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
