Adding Grappling Hook functionality

--- a/bolt_away/.godot/global_script_class_cache.cfg
+++ b/bolt_away/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"CharacterBody2D",
+"class": &"MultiplayerPlayer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/multiplayer/multiplayer_controller.gd"
+}, {
 "base": &"Node",
 "class": &"PlayerInput",
 "icon": "",
