Grappling Hook Autlocks

--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/jump_pad.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/powerups/", "res://scripts/multiplayer/", "res://scenes/", "res://scenes/powerups/", "res://assets/", "res://assets/sprites/", "res://assets/powerups (placeholders)/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/powerups/", "res://scripts/multiplayer/", "res://scenes/", "res://scenes/powerups/", "res://chunks/", "res://assets/", "res://assets/sprites/", "res://assets/powerups (placeholders)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -27,15 +27,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/main_menu.tscn", "res://scenes/game.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/player.tscn", "res://scenes/point.tscn", "res://scenes/powerups/grapplingHook.tscn", "res://scenes/powerups/dash.tscn", "res://scenes/powerups/grappling_hook_powerup.tscn")
 current_scene="res://scenes/powerups/grapplingHook.tscn"
-center_split_offset=0
+center_split_offset=-1026
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/powerups/grapplinghook.gd", "res://scripts/multiplayer/multiplayer_controller.gd", "res://scripts/powerup_manager.gd"]
-selected_script="res://scripts/powerup_manager.gd"
+open_scripts=["res://scripts/chunk.gd", "res://scripts/powerups/grapplinghook.gd", "res://scripts/multiplayer/multiplayer_controller.gd"]
+selected_script="res://scripts/chunk.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
