--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -30,12 +30,12 @@ current_scene="res://scenes/game.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/multiplayer/multiplayer_controller.gd", "res://scripts/multiplayer/multiplayer_manager.gd"]
-selected_script="res://scripts/multiplayer/multiplayer_manager.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
