--- a/WHatefver/bolt_away/.godot/editor/editor_layout.cfg
+++ b/WHatefver/bolt_away/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/multiplayer/", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/sounds/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/Desert_Spikes.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/multiplayer/", "res://scenes/", "res://chunks/", "res://assets/", "res://assets/sprites/", "res://assets/sounds/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/rocky_lava_tile.tscn")
-current_scene="res://scenes/rocky_lava_tile.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn")
+current_scene="res://scenes/game.tscn"
 center_split_offset=-650
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
