--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/powerups/oilspill.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main_menu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/powerups/", "res://scenes/", "res://scenes/powerups/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/player.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/powerups/power_up_spawner.tscn", "res://scenes/powerups/oilspill_powerup.tscn", "res://scenes/powerups/oilspill.tscn")
-current_scene="res://scenes/powerups/oilspill.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/player.tscn", "res://scenes/multiplayer_player.tscn", "res://scenes/powerups/power_up_spawner.tscn", "res://scenes/powerups/oilspill_powerup.tscn", "res://scenes/powerups/oilspill.tscn", "res://scenes/main_menu.tscn")
+current_scene="res://scenes/main_menu.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/powerups/oilspill.gd", "res://scripts/powerup_manager.gd", "res://scripts/powerups/powerup_spawner.gd"]
-selected_script="res://scripts/powerups/oilspill.gd"
+open_scripts=["res://scripts/game_manager.gd"]
+selected_script="res://scripts/game_manager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
