--- a/bolt_away/export_presets.cfg
+++ b/bolt_away/export_presets.cfg
@@ -12,7 +12,7 @@ customized_files={
 }
 include_filter=""
 exclude_filter=""
-export_path="./bolt_away.dmg"
+export_path="../../bolt_away.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
