--- a/bolt_away/.godot/editor/project_metadata.cfg
+++ b/bolt_away/.godot/editor/project_metadata.cfg
@@ -9,7 +9,7 @@ show_compatible_methods_only=true
 
 <<<<<<<HEADscenes=["res://scenes/wasteland_tile_set.tscn", "res://scenes/game.tscn", "res://scenes/rocky_lava_tile.tscn", "res://scenes/death_wall.tscn", "res://scenes/main_menu.tscn", "res://scenes/desert_spikes.tscn", "res://scenes/multiplayer_player.tscn", "res://chunks/starting_chunk.tscn", "res://chunks/chunk3.tscn", "res://chunks/chunk2.tscn"]
 scripts=["ScriptLanguageExtension", "EditorInterface", "res://scripts/killzone.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/game_manager.gd", "res://scripts/chunk.gd", "res://scripts/death_wall.gd", "res://scripts/player.gd"]
-scenes=["res://scenes/rocky_lava_tile.tscn", "res://scenes/game.tscn"]
+scenes=["res://scenes/game.tscn", "res://scenes/rocky_lava_tile.tscn"]
 
 [dialog_bounds]
 
