Added Constants Autoload Scripts + Refactors

--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/ParallaxBackground/TopLayer.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scripts/powerups/", "res://scenes/", "res://scenes/powerups/", "res://chunks/", "res://assets/", "res://assets/ParallaxBackground/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/gameConstants.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/powerups/", "res://assets/ParallaxBackground/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scripts/chunk.gd", "res://scripts/death_wall.gd", "res://scripts/multiplayer/multiplayer_controller.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/player.gd", "res://scripts/powerups/powerup_hud.gd"]
+selected_script="res://scripts/chunk.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
