--- a/bolt_away/.godot/editor/script_editor_cache.cfg
+++ b/bolt_away/.godot/editor/script_editor_cache.cfg
@@ -34,8 +34,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 89,
-"scroll_position": 89.0,
+"row": 178,
+"scroll_position": 178.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -48,8 +48,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 15.0,
+"row": 27,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -62,8 +62,8 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 30.0,
+"row": 165,
+"scroll_position": 165.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,8 +76,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 246,
-"scroll_position": 247.0,
+"row": 111,
+"scroll_position": 111.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -244,8 +244,22 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
+"row": 10,
+"scroll_position": 10.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/powerups/powerup_hud.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
 "row": 7,
-"scroll_position": 7.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
