--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/death_wall.gd", "res://scripts/multiplayer/multiplayer_controller.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/player.gd", "res://scripts/powerups/powerup_hud.gd"]
-selected_script="res://scripts/chunk.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
