--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_scene.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/transient_wall.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://webrtc/", "res://scripts/", "res://scenes/", "res://chunks/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,13 +29,13 @@ open_scenes=PackedStringArray("res://main/main.tscn")
 current_scene="res://main/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/death_wall.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://main/main.gd", "res://scripts/point.gd", "res://scripts/pop_up.gd"]
-selected_script="res://scripts/game_scene.gd"
+open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/death_wall.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://main/main.gd", "res://scripts/point.gd", "res://scripts/pop_up.gd", "res://scripts/WALLtransient_platform.gd"]
+selected_script="res://scripts/WALLtransient_platform.gd"
 open_help=["PackedScene"]
 script_split_offset=70
 list_split_offset=0
