--- a/bolt_away/.godot/editor/editor_layout.cfg
+++ b/bolt_away/.godot/editor/editor_layout.cfg
@@ -17,24 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://chunks/chunk1.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/powerups/", "res://scenes/", "res://chunks/", "res://assets/powerups (placeholders)/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/transient_platform.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/powerups/", "res://scenes/", "res://assets/powerups (placeholders)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://chunks/chunk21.tscn", "res://chunks/chunk22.tscn", "res://scenes/transient_wall.tscn", "res://scenes/test_scene.tscn")
+current_scene="res://scenes/test_scene.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://scripts/main_menu.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/powerups/oilspill.gd", "res://scripts/platform.gd", "res://scripts/player.gd", "res://scripts/powerups/powerup.gd", "res://scripts/powerups/powerup_spawner.gd", "res://scripts/WALLtransient_platform.gd"]
-selected_script="res://scripts/chunk.gd"
+open_scripts=["res://scripts/chunk.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://scripts/main_menu.gd", "res://scripts/multiplayer/multiplayer_manager.gd", "res://scripts/powerups/oilspill.gd", "res://scripts/platform.gd", "res://scripts/player.gd", "res://scripts/powerups/powerup.gd", "res://scripts/powerups/powerup_spawner.gd", "res://scripts/WALLtransient_platform.gd"]
+selected_script="res://scripts/WALLtransient_platform.gd"
 open_help=["EditorInterface", "ScriptLanguageExtension", "TileMapLayer"]
 script_split_offset=140
 list_split_offset=0
