--- a/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
@@ -145,3 +145,17 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://scripts/WALLtransient_platform.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 5.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
