--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -30,12 +30,12 @@ current_scene="res://main/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/death_wall.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://main/main.gd", "res://scripts/point.gd", "res://scripts/pop_up.gd", "res://scripts/WALLtransient_platform.gd"]
-selected_script="res://scripts/WALLtransient_platform.gd"
+open_scripts=["res://scripts/chunk.gd", "res://scripts/constants.gd", "res://scripts/death_wall.gd", "res://scripts/end_game_pop_up.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/killzone.gd", "res://scripts/level.gd", "res://main/main.gd", "res://scripts/point.gd", "res://scripts/pop_up.gd", "res://scripts/WALLtransient_platform.gd"]
+selected_script="res://scripts/end_game_pop_up.gd"
 open_help=["PackedScene"]
 script_split_offset=70
 list_split_offset=0
