Refactor spectator function logic

--- a/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
@@ -21,12 +21,8 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 32,
-"selection_from_line": 5,
-"selection_to_column": 31,
-"selection_to_line": 6,
+"scroll_position": 6.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,15 +45,53 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 334,
-"scroll_position": 327.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 334,
-"selection_to_column": 25,
-"selection_to_line": 334,
+"row": 343,
+"scroll_position": 343.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/end_game_pop_up.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 5.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/spectator_overlay.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 36.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/main_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 25,
+"scroll_position": 25.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
