Refactoring Profanity Filter

--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scripts/main_menu.gd", "res://scripts/pause_menu.gd", "res://scripts/spectator_overlay.gd"]
-selected_script="res://scripts/pause_menu.gd"
+selected_script="res://scripts/main_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
