Fix harrasser synchronization issues

--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=576
+dock_hsplit_3=-432
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -25,18 +25,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://chunks/swamp_chunk1.tscn", "res://chunks/chunk_11.tscn", "res://scenes/test_level.tscn", "res://scenes/enemy.tscn", "res://scenes/player_character.tscn", "res://chunks/starting_chunk.tscn")
-current_scene="res://chunks/starting_chunk.tscn"
+open_scenes=PackedStringArray("res://main/main.tscn", "res://chunks/swamp_chunk1.tscn", "res://chunks/chunk_11.tscn", "res://scenes/test_level.tscn", "res://scenes/player_character.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/death_wall.tscn", "res://scenes/enemy.tscn", "res://chunks/chunk1.tscn", "res://chunks/chunk2.tscn")
+current_scene="res://chunks/chunk2.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=4
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/main_menu.gd"]
-selected_script="res://scripts/main_menu.gd"
-open_help=[]
+open_scripts=["res://main/client.gd", "res://scripts/enemy.gd", "res://ai/tasks/find_target.gd", "res://scripts/lobby_menu.gd", "res://scripts/multiplayer_input.gd"]
+selected_script="res://scripts/lobby_menu.gd"
+open_help=["BehaviorTree", "BTInstance", "BTPlayer", "BTProbability", "BTSelector"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
@@ -51,7 +51,7 @@ text_shader_zoom_factor=1.0
 [LimboAI]
 
 bteditor_open_bts=["res://ai/trees/enemy.tres"]
-bteditor_hsplit=-320
+bteditor_hsplit=-528
 debugger_update_interval_msec=0.0
 task_palette_collapsed_sections=[]
 task_palette_type_filter=0
