Updated the text in the tutorial

--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/game_scene.tscn", "res://scenes/tutorial_buttons.tscn")
-current_scene="res://scenes/game_scene.tscn"
+current_scene="res://scenes/tutorial_buttons.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
