--- a/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/editor_layout.cfg
@@ -9,37 +9,37 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=576
-dock_hsplit_3=-432
+dock_hsplit_2=482
+dock_hsplit_3=-694
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/powerups/powerup_hud.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/flying_enemy.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/spectator_overlay.tscn", "res://scenes/UI.tscn", "res://scenes/player_character.tscn")
-current_scene="res://scenes/player_character.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/spectator_overlay.tscn", "res://scenes/game_scene.tscn", "res://scenes/end_pop_up.tscn", "res://scenes/in_lobby_menu.tscn", "res://scenes/flying_enemy.tscn", "res://scenes/test_level.tscn", "res://chunks/starting_chunk.tscn", "res://scenes/player_character.tscn", "res://scenes/test_player_character.tscn", "res://chunks/chunk3.tscn")
+current_scene="res://chunks/chunk3.tscn"
+center_split_offset=-491
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/death_wall.gd", "res://scripts/end_game_pop_up.gd", "res://scripts/game_scene.gd", "res://scripts/intro.gd", "res://scripts/in_lobby_menu.gd", "res://scripts/lobby_menu.gd", "res://main/main.gd", "res://scripts/main_menu.gd", "res://scripts/player_character.gd", "res://scripts/powerups/powerup_hud.gd", "res://scripts/powerups/powerup_manager.gd", "res://scripts/spectator_overlay.gd", "res://scripts/ui.gd", "res://main/user.gd"]
-selected_script="res://scripts/powerups/powerup_manager.gd"
-open_help=["CanvasItem", "Control", "InputEventPanGesture", "ProgressBar", "Range", "TextureProgressBar", "Timer"]
+open_scripts=["res://ai/tasks/choose_random_position.gd", "res://scripts/flying_enemy.gd"]
+selected_script="res://scripts/flying_enemy.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.21429
+zoom_factor=1.0
 
 [ShaderEditor]
 
@@ -50,8 +50,8 @@ text_shader_zoom_factor=1.0
 
 [LimboAI]
 
-bteditor_open_bts=["res://ai/trees/enemy.tres"]
-bteditor_hsplit=-528
+bteditor_open_bts=[]
+bteditor_hsplit=-640
 debugger_update_interval_msec=0.0
 task_palette_collapsed_sections=[]
 task_palette_type_filter=0
