--- a/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
+++ b/super_smash_bolt_ultimate/client/.godot/editor/script_editor_cache.cfg
@@ -49,16 +49,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 334,
-"scroll_position": 327.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 334,
-"selection_to_column": 25,
-"selection_to_line": 334,
+"row": 192,
+"scroll_position": 192.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -112,36 +108,22 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
+"row": 18,
+"scroll_position": 18.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/game_scene.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
 "row": 52,
 "scroll_position": 52.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://ai/tasks/move_to_target.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 11,
-"scroll_position": 11.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://ai/tasks/bt_probability.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 15,
-"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
